<resources>
    <string name="app_name">Password Manager</string>
    <string name="password_length">Length</string>
    <string name="password_url">Website</string>
    <string name="generate_password_button_text">Generate</string>
    <string name="generated_password">Password</string>
    <string name="save_password_button_text">Save</string>
    <string name="save_preferred_password_length_button_text">Save preference</string>
    <string name="backup_button_text">Backup</string>
    <string name="title_activity_login">Sign in</string>
    <string name="password_list">Password List</string>
    <string name="load">Reload</string>
    <string name="update">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="accessibility_service_description">Password Helper</string>
    <!-- Strings related to login -->
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="createAccountIcon">Create Account</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Action Search</string>
    <string name="login_toolbar_title">Log In</string>
    <string name="passwordWallet">Password Wallet</string>

    <string name="sample_textView">Sample Text View</string>
    <string name="forgotpassword"><a href="Forgot Password ?">Forgot Password?</a></string>
    <string name="forgotPasswordMessage">
        Please enter your email Id and we will send you the further instructions.
    </string>
    <string name="forgotpasswordSend">Send</string>
    <string name="forgotPassword_toolbar_title">Forgot Password</string>

    <string name="settings_listViewItem1">Advanced</string>
    <string name="settings_listviewItem2">About PasswordWallet</string>

    <string name="advancedSettings_textView">Advanced Settings</string>

    <string name="popupwindow_aboutapp">This is password wallet app</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="info">Your Info</string>
    <string name="hint">Email</string>
    <string name="master_pswd">Master Password</string>
    <string name="confirm_pswd">Confirm Password</string>
    <string name="pswd_hint">Password Reminder(Optional)</string>
    <string name="action_create_account">Create Account</string>
    <string name="createAccount_toolbar_title">Create Account</string>

    <string name="registeredSites_toolbar_title">Sites</string>
    <string name="listpassword_toolbar_title">Sites</string>
    <string name="editPassword_toolbar_title">Site</string>

    <string name="add_login_toolbar_title">Add New Login</string>
    <string name="navdrawer_item0">Generate Password</string>

    <string name="aboutapp_toolbar_title">About PasswordWallet</string>
    <string name="AboutApp_textView1">Password Wallet</string>
    <string name="AboutApp_textView2">Version 1.0.0 \n Built: 10/21/2016 5:30 PM</string>
    <string name="title_activity_get_password_dialog">GetPasswordDialogActivity</string>
    <!--General-->
    <string name="selfpackagename">in.ac.iiitd.mt14033.passwordmanager</string>
    <string name="VTAG">PasswordManagerVerbose</string>
    <string name="PREFFERED_PASSWORD_LENGTH">Preferred_Password_Length</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="ERROR_INVALID_URL">Invalid URL</string>
    <string name="ERROR_GENERIC1">An Error occurred. Please try later.</string>

    <!--Dialog Generate Password-->
    <string name="dialog_genpass_title">Generate Password</string>
    <string name="dialog_genpass_hint_generated">GeneratedPass</string>
    <string name="dialog_genpass_hint_passlen">Password Length: </string>

    <!--Dialog Matching Logins-->
    <string name="matching_login_popup_content_description">matchingpasswordpopup</string>
    <string name="dialog_matching_title">Matching Logins</string>
    <string name="add_login_button_text">Add Login</string>
    <string name="matching_logins">Matching Logins</string>
    <string name="matching_login_notification_title">Matching Logins</string>
    <string name="matching_login_notification_subtitle">Tap to autofill or add new login</string>
    <string name="add_login_not_logged_in">Please log in first to add new login.</string>

    <!--Logout-->
    <string name="logout_message">You have been logged out.</string>
</resources>
