<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp"
    android:contentDescription="@string/matching_login_popup_content_description"
    android:weightSum="1"
    android:background="@android:color/white">

    <TextView
        android:text="@string/dialog_matching_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:textAlignment="center"
        android:textSize="26sp"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/matching_login_list"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/login_cancel_btn_id"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="cancelButtonTapped"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/add_login_btn_id"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="addLoginButtonTapped"
            android:text="@string/add_login_button_text"/>
    </LinearLayout>

</LinearLayout>
