<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/dialog_genpass_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:textSize="26sp"
        android:gravity="center"
        android:background="@android:color/white"
        android:contentDescription="@string/app_name" />
    <TextView
        android:id="@+id/dialog_genpass_generated_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:textSize="22sp"
        android:textAlignment="center"
        android:hint="@string/dialog_genpass_hint_generated"
        android:background="#fffedb" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp">
        <TextView
            android:id="@+id/dialog_genpass_passlen"
            android:hint="@string/dialog_genpass_hint_passlen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:gravity="center"/>
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_autorenew_black"
            android:background="@null"
            android:layout_marginStart="4dp"
            android:scaleX="1"
            android:scaleY="1"
            android:layout_gravity="right"
            android:id="@+id/dialog_genpass_regen_btn"
            android:layout_weight="1" />
    </LinearLayout>


    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="60"
        android:progress="1"
        android:id="@+id/dialog_genpass_seek_plen" />

</LinearLayout>