<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="in.ac.iiitd.mt14033.passwordmanager.RegisterActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/registerAccount_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:id="@+id/registerAccount_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_registerAccount_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="40dp">

            <TextView
                android:id="@+id/txt_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/info"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_info"
                android:padding="10dp"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/master_pswd"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:hint="@string/master_pswd"
                android:inputType="text" />

            <EditText
                android:id="@+id/confirm_pswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_below="@+id/master_pswd"
                android:textColor="@android:color/black"
                android:hint="@string/confirm_pswd"
                android:inputType="text" />

            <EditText
                android:id="@+id/pswd_hint"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirm_pswd"
                android:hint="@string/pswd_hint"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:inputType="text" />

            <Button
                android:id="@+id/create_account_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="@string/action_create_account"
                android:textStyle="bold"
                android:onClick="registerMasterUserTapped" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
