<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/generatePassword_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_login_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textUri"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_login_url_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_url"
                    android:inputType="textUri"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_login_username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textUri"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/add_login_password_et_layout"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="255dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.90">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/add_login_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/generated_password"
                        android:inputType="textPassword"
                        android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_autorenew_black"
                    android:background="@null"
                    android:layout_marginStart="4dp"
                    android:onClick="generatePasswordTapped"
                    android:id="@+id/add_login_generate_password_btn"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:text="@string/save_password_button_text"
                android:layout_marginTop="8dp"
                android:id="@+id/add_login_save_login_btn"
                android:background="@color/colorPrimaryButton"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
